--- a/style.css
+++ b/style.css
@@ -2,15 +2,110 @@
         body{
             margin: 0;
             padding: 0;
+            font-size: 20px;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+
+        body {
+            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background-size: 400% 400%;
+            animation: gradient 15s ease infinite;
+            height: 100vh;
+        }
+        @keyframes gradient {
+            0% {
+                background-position: 0% 50%;
+            }
+         
+            50% {
+                background-position: 100% 50%;
+            }
+         
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        .nav{
+            width: 100%;
+            height: 100px;
+            background-color: #222121;
+        }
+
+        .foot{
+            width: 100%;
+            height: 300px;
+            background-color: #222121;
         }
 
         .cont{
             width: 100%;
-            height: 100px;
+            height: 600px;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: rgb(209, 255, 134);
+            opacity: 0.9;
+            background-size: 20px 20px;
+            background-position: 0 0,10px 10px;
+            background-image: radial-gradient(currentColor 1px, transparent 1px);
+            background-size: calc(10 * 1px) calc(10 * 1px);
+        }
+
+        .visible{
+            justify-content: center;
+            width: 90%;
+            display: flex;
+            margin: 0;
+        }
+
+        .obrys-border{
+            transition: 1s;
+            display: flex;
+            background-color: rgb(0, 0, 0);
+            padding: 30px;
+            border-radius: 30px;
+            opacity: 100%;
+            margin: 10px;
+            filter: drop-shadow(0 0 1.25rem rgb(2, 2, 2));
+        }
+
+        .obrys-border:hover{
+            filter: drop-shadow(0 0 1.25rem rgb(94, 94, 94));
+        }
+
+
+        .obrys{
+            height: 100px;
+            display: flex;
+            padding: 5px;
+            background-color: rgb(20, 20, 20);
+            border-radius: 20px;
+            opacity: 100%;
+        }
+
+        .obrys-2{
+            padding: 5px;
+            height: 100px;
+            width: 200px;
+            display: flex;
+            justify-content: space-around;
+            background-color: rgb(20, 20, 20);
+            border-radius: 20px;
+            opacity: 100%;
+        }
+
+        .wpisywanie{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            color: white;
+        }
+
+        .wpisywanie-2{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            color: white;
         }
 
         .podsumowanie{
@@ -27,6 +122,65 @@
             height: fit-content;
         }
 
-        input, select, button{
-            padding: 5px;
+        input{
+            padding: 15px;
+            border-bottom: solid 2px #292929;
+            border-top: none;
+            border-left: transparent;
+            border-right: transparent;
+            font-size: 20px;
+            margin: 10px;
+            color: white;
+            background-color: transparent;
         }
+
+
+
+        input:focus{
+            outline: none !important;
+            transition: 0.5s;
+            border-bottom: 1px solid;
+            border-image-slice: 1;
+            border-image-source: linear-gradient(-270deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            animation: gradient 15s ease infinite;
+        }
+
+        select{
+            padding: 15px;
+            border: transparent;
+            font-size: 20px;
+            margin: 10px;
+            background-color: transparent;
+            color: white;
+            outline: none;
+        }
+
+        #wynik{
+            height: 50px;
+            width: 150px;
+            display: flex;
+            padding: 5px;
+            background-color: rgb(255, 255, 255);
+            border-radius: 15px;
+            opacity: 100%;
+            align-items: center;
+            justify-content: center;
+            color: black;
+        }
+
+        button{
+            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background-size: 400% 400%;
+            animation: gradient 15s ease infinite;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 20px;
+            border-radius: 15px;
+            margin: 10px;
+        }
+
+        
