--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
             margin: 0;
             padding: 0;
             font-size: 20px;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            overflow:hidden;
         }
 
         body {
@@ -11,6 +11,7 @@
             background-size: 400% 400%;
             animation: gradient 15s ease infinite;
             height: 100vh;
+            font-family: 'Oswald', sans-serif;
         }
         @keyframes gradient {
             0% {
@@ -30,6 +31,9 @@
             width: 100%;
             height: 100px;
             background-color: #222121;
+            justify-content: space-between;
+            align-items: center;
+            display: flex;
         }
 
         .foot{
@@ -132,17 +136,14 @@
             margin: 10px;
             color: white;
             background-color: transparent;
+            transition: 0.8s;
         }
-
-
 
         input:focus{
             outline: none !important;
             transition: 0.5s;
-            border-bottom: 1px solid;
-            border-image-slice: 1;
-            border-image-source: linear-gradient(-270deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-            animation: gradient 15s ease infinite;
+            border-bottom: 1px solid  #e73c7e;
+            transition: 0.8s;
         }
 
         select{
@@ -153,6 +154,12 @@
             background-color: transparent;
             color: white;
             outline: none;
+        }
+
+        option{
+            color: rgb(0, 0, 0) !important;
+            background: #ffffff !important;
+            text-transform: uppercase;
         }
 
         #wynik{
@@ -181,6 +188,41 @@
             font-size: 20px;
             border-radius: 15px;
             margin: 10px;
+            font-family: 'Oswald', sans-serif;
         }
 
-        
+        button:hover{
+            cursor: pointer;
+        }
+
+        ul{
+            list-style-type: none;
+            justify-content: center;
+            display: flex;
+            margin: 0;
+            padding-left: 30px;
+            padding-right: 30px;
+            vertical-align: top;
+        }
+
+        li{
+            text-decoration: none;
+            color: white;
+            padding: 10px;
+        }
+
+        a{
+            text-decoration: none;
+            color: white;
+            transition: 0.8s;
+        }
+
+        a:hover{
+            color: #e73c7e;
+            transition: 0.8s;
+        }
+
+        #arrow-right{
+            width: 40px;
+        }
+
